Peach needs to be fixed

--- a/index.html
+++ b/index.html
@@ -1,11 +1,28 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <!-- You may want to change the site title -->
-    <title>foobar</title>
-  </head>
-  <body>
-    <!-- put your content below -->
-    <h1>Hello World!</h1>
-  </body>
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="styles.css">
+    <title>Ana and Steph CSS</title>
+</head>
+<body>
+    <div class="mainGrid">
+        <div class="cell">🙈</div>
+        <div class="cell">🦄</div>
+        <div class="cell">🎸</div>
+        <div class="cell">🥷🏽</div>
+        <div class="cell">🥭</div>
+        <div class="cell">🐉</div>
+        <div class="cell">🐯</div>
+        <div class="cell">🛼</div>
+        <div class="featureBlock">
+            <h1>Feature</h1>
+        </div>
+        <div class="verticalBlock">
+            <h1>Vertical</h1>
+        </div>
+    </div>
+    
+</body>
 </html>
